--- a/Inheritance.html
+++ b/Inheritance.html
@@ -7,26 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Specificity</title>
     <style>
-        body
-        {
-            color:orange;
+        body {
+            color: orange;
         }
-        .class1{
-            color:inherit;
+
+        .class1 {
+            color: inherit;
         }
-        .class2{
-            color:initial;
+
+        .class2 {
+            color: initial;
         }
-        .class3{
-            color:unset;
+
+        .class3 {
+            color: unset;
         }
     </style>
 
 </head>
+
 <body>
     <h1>This is the practice inheritence</h1>
     <ul>
-        <li ><a href="#">Default</a></li>
+        <li><a href="#">Default</a></li>
         <li class="class1">Inheritance<a href="#"></a></li>
         <li class="class2">Initial<a href="#"></a></li>
         <li class="class3">Unset<a href="#"></a></li>
