This is box-sizing example

--- a/z-index_box-sizing_clip-path/z-index_box-sizing_clip-path.html
+++ b/z-index_box-sizing_clip-path/z-index_box-sizing_clip-path.html
@@ -10,9 +10,18 @@
 </head>
 
 <body>
+    <!-- Advance Properties of CSS -->
     <!-- Importing image for practice of clip path generator -->
-    <img class="clip_path" src="../images/ivan-mercado-Vn23hKQUNds-unsplash.jpg" alt="This image not found">
-    <h1>This is the example of clip path</h1>
+    <!-- <img class="clip_path" src="../images/ivan-mercado-Vn23hKQUNds-unsplash.jpg" alt="This image not found"> -->
+    <!-- <h1>This is the example of clip path</h1> -->
+
+    <!-- Box-sizing property  -->
+    <div class="box content_box">
+        <h1>Content Box</h1>
+    </div>
+    <div class="box border_box">
+        <h1>Border box</h1>
+    </div>
 </body>
 
 </html>
