box sizing examle version 2

--- a/z-index_box-sizing_clip-path/box-sizing_clip-path.html
+++ b/z-index_box-sizing_clip-path/box-sizing_clip-path.html
@@ -12,8 +12,7 @@
 <body>
     <!-- Advance Properties of CSS -->
     <!-- Importing image for practice of clip path generator -->
-    <!-- <img class="clip_path" src="../images/ivan-mercado-Vn23hKQUNds-unsplash.jpg" alt="This image not found"> -->
-    <!-- <h1>This is the example of clip path</h1> -->
+    <img class="clip_path" src="../images/ivan-mercado-Vn23hKQUNds-unsplash.jpg" alt="This image not found"> -->
 
     <!-- Box-sizing property  -->
     <div class="box content_box">
