--- a/example_forms/html/practice1.html
+++ b/example_forms/html/practice1.html
@@ -12,10 +12,27 @@
 
 <body>
     <div class="background">
-        {
-
-        }
-
+        <div class="navbar">
+            <img src="../images/logo.png" class="logo">
+            <a href="#" class="button">Sign In</a>
+        </div>
+        <div class="content">
+            <small>I AM DEVIL OF </small>
+            <h1>My Own World</h1>
+            <a href="#" class="button">Take A Tour</a>
+        </div>
+        <div class="sidebar">
+            <img src="../images/menu.png" class="manu">
+            <div class="socialMedia">
+                <img src="../images/fb.png">
+                <img src="../images/ig.png">
+                <img src="../images/tw.png">
+            </div>
+            <div class="infoLinks">
+                <img src="../images/info.png" alt="">
+                <img src="../images/share.png" alt="">
+            </div>
+        </div>
     </div>
 </body>
 
