till navigarion bar

--- a/example_forms/html/web2.html
+++ b/example_forms/html/web2.html
@@ -14,24 +14,17 @@
     <div class="background">
         <header>
             <nav>
-                <p>This is navigation</p>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About ME</a></li>
+                    <li><a href="#">Blogs</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
             </nav>
             <h1>MY BLOGS</h1>
-            <p id="writer">Writer: Kashif Kamran</p>
-            <div class="writer_details">
-                <ul class="mainList">
-                    <li>Student Of FAST ISLAMABAD</li>
-                    <li>Degree Of Computer Science</li>
-                    <li>Expert In Languages
-                        <ul class="domainList">
-                            <li>C++ </li>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>PYTHON</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+            <p id="writer"> By: Kashif Kamran</p>
+            <p class="writer_details">From National Universtiy of Computer and Emerging Sciences, Islamabad</p>
+            <input type="search" name="search" id="search">
         </header>
 
         <aside>
