Renamed The Folder and updates in web2.html and web2.css

--- a/examples/html/web2.html
+++ b/examples/html/web2.html
@@ -24,7 +24,7 @@
             <h1>MY BLOGS</h1>
             <p id="writer"> By: Kashif Kamran</p>
             <p class="writer_details">From National Universtiy of Computer and Emerging Sciences, Islamabad</p>
-            <input type="search" name="search" id="search">
+            <input type="search" name="search" id="search" placeholder="       Search">
         </header>
 
         <aside>
