New files are added as well as the there is edition in some of the file

--- a/examples/html/flexBox.html
+++ b/examples/html/flexBox.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Box</title>
+    <title>Flex Box</title>
+    <link rel="stylesheet" href="../css/flexBox.css">
 </head>
 
 <body>
-
+    <div class="background">
+        <h1>
+            This is the small
+        </h1>
+    </div>
 </body>
 
 </html>
