Following changes are added 1- My own image (kashif kamran) is added 2- Something is updated in webdesign project 3- Flex Box is learned and its example is added in files flex flexBox.html and flexbox.css Thankyou

--- a/examples/html/flexBox.html
+++ b/examples/html/flexBox.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flex Box</title>
+    <title>FlexBox Html</title>
     <link rel="stylesheet" href="../css/flexBox.css">
 </head>
 
 <body>
-    <div class="background">
-        <h1>
-            This is the small
-        </h1>
+    <div class="flex-container">
+        <div class="flex-item">Box 1</div>
+        <div class="flex-item">Box 2</div>
+        <div class="flex-item">Box 3</div>
+        <div class="flex-item">Box 4</div>
+        <div class="flex-item">Box 5</div>
     </div>
 </body>
 
