--- a/examples/html/webDesign.html
+++ b/examples/html/webDesign.html
@@ -24,7 +24,7 @@
         </header>
         <aside>
             <div class="img">
-                <img src="../images/wp2578195-4k-wallpaper (1).jpg" alt="">
+                <img src="../images/IMG_0547 copy.jpg" alt="">
             </div>
             <p id="name">Name : Kashif Kamran</p>
             <p>From: Rahimyar Khan</p>
@@ -46,6 +46,13 @@
                 nobis odio maiores quas, laboriosam, animi velit. Consequuntur?
             </p>
         </section>
+        <footer>
+            <span class="socialMedia">
+                <a href="https://web.facebook.com/kashif.kamran.503092/"><img src="../images/fb.png"
+                        alt="Facebook image not found"></a>
+            </span>
+
+        </footer>
     </div>
 
 </body>
