--- a/examples/html/flexBox.html
+++ b/examples/html/flexBox.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="flex-container">
-        <div class="flex-item">Box 1</div>
-        <div class="flex-item">Box 2</div>
-        <div class="flex-item">Box 3</div>
-        <div class="flex-item">Box 4</div>
-        <div class="flex-item">Box 5</div>
+        <div class="flex-item">Home</div>
+        <div class="flex-item">Services</div>
+        <div class="flex-item">Registration</div>
+        <div class="flex-item">Sign in</div>
+        <div class="flex-item">About us</div>
     </div>
 </body>
 
