Tutorials examples for loop --> Tut_8.js functions --> Tut_9.js

--- a/JavaScript/JS/index.html
+++ b/JavaScript/JS/index.html
@@ -14,8 +14,10 @@
     <!-- <script src="./Tut_2.js"></script> -->
     <!-- <script src="./Tut_4.js"></script> -->
     <!-- <script src="./Tut_5.js"></script> -->
-    <script src="./Tut_6.js"></script>
-
+    <!-- <script src="./Tut_6.js"></script> -->
+    <!-- <script src="./Tut_7.js"></script> -->
+    <!-- <script src="./Tut_8.js"></script> -->
+    <script src="./Tut_9.js"></script>
 </body>
 
 </html>
