--- a/JavaScript/JS/index.html
+++ b/JavaScript/JS/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Web Development | JavaScript </h1>
+    <!-- ------------------- Functional Programing Tutorials ------------------- -->
     <!-- <script src="./Tut_1.js"></script> -->
     <!-- <script src="./Tut_2.js"></script> -->
     <!-- <script src="./Tut_4.js"></script> -->
@@ -17,7 +18,9 @@
     <!-- <script src="./Tut_6.js"></script> -->
     <!-- <script src="./Tut_7.js"></script> -->
     <!-- <script src="./Tut_8.js"></script> -->
-    <script src="./Tut_9.js"></script>
+    <!-- <script src="./Tut_9.js"></script> -->
+    <script src="./Tut_10.js"></script>
+
 </body>
 
 </html>
